Truncate user name if too long. Fix sidebar game name truncation and icon spacing. Friends game tooltip avatar size reduction.

--- a/css/main/client.css
+++ b/css/main/client.css
@@ -304,6 +304,9 @@ table, th, td, tbody, thead, tr {
   -webkit-mask: none !important;
   mask: none !important;
   flex-grow: 1 !important;
+  text-overflow: ellipsis !important;
+  overflow: hidden !important;
+  white-space: nowrap !important;
 }
 
 .ingame .nOdcT-MoOaXGePXLyPe0H {
@@ -407,6 +410,10 @@ img.AB86vEzEKPL0y5fK_m4pT {
 
 ._4ZTzGZ5TTgFyfw1DcXLXS {
   gap: 8px !important;
+  width: 100% !important;
+  text-overflow: ellipsis !important;
+  white-space: nowrap !important;
+  overflow: hidden !important;
 }
 
 ._3sxE7F1LV2IcSX68YsH9dI {
