--- a/css/tooltip/tooltip.css
+++ b/css/tooltip/tooltip.css
@@ -123,6 +123,13 @@
   display: var(--zehn-display-tooltips) !important;
   padding: 8px !important;
   border: 1px solid var(--zehn-color-tooltip-border) !important;
+  flex-direction: column !important;
+  gap: 8px !important;
+}
+
+._2iiN7AYnLFTRFRiuipiYJz .nibodjvvrm86uCfnnAn4g.X-Small {
+  width: 16px !important;
+  height: 16px !important;
 }
 
 ._2XyBbhE-O3Bc2CcJ_C-V1F ._3RQJ0dX8rpaAMAnYEj3qf_ {
